contact us img changed

--- a/css/style.css
+++ b/css/style.css
@@ -6765,7 +6765,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .contact-us-title {
-	background: url(../images/desktop_banners_contact-us.png) center;
+	background: url(../images/contact-us.jpg) center;
 	background-size: cover;
 	width: 100%;
 	height: 700px;
